# StringSortsMeter

./: CMakeLists.txt  main.cpp
algorithms/: Algorithms.cpp  Algorithms.h
generator/: StringGenerator.cpp  StringGenerator.h
meter/: SortsMeter.cpp  SortsMeter.h
metter/: SortsMetter.cpp  SortsMetter.h
